--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "met_mw/sdatagrid",
     "type": "library",
+    "keywords": ["universal", "datagrid", "table generator"],
+    "license": "MIT",
     "authors": [
         {
             "name": "met-mw",
@@ -12,6 +14,10 @@
     "repositories": [],
     "require": {
         "php": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.4",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
